--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -129,6 +129,7 @@ add_library(libsirius-objects OBJECT EXCLUDE_FROM_ALL
 
     # translation
     sirius/translation/frequency_translator.h
+    sirius/translation/frequency_translator.txx
     sirius/translation/interpolator.h
     sirius/translation/interpolator.cc
     sirius/translation/parameters.h
